--- a/CTMTechTest/appsettings.json
+++ b/CTMTechTest/appsettings.json
@@ -1,8 +1,13 @@
-﻿{
+{
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "TransactionContext": "Server=(localdb)\\mssqllocaldb;Database=CTMTechTest;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "MerchantContext": "Server=(localdb)\\mssqllocaldb;Database=CTMTechTest;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DataContext": "Server=(localdb)\\mssqllocaldb;Database=CTMTechTest;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
